--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic-lg.jpg"></a>
+      <a href="/"><img src="img/profilepic-min.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
